--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           r2e new grubbyear@pm.me
           r2e add https://feeds.reuters.com/reuters/UKTopNews
-          r2e add https://www.theguardian.com/world/rss
+          r2e add https://www.bbc.co.uk/news/rss.xml
 
       - name: Send email
         env:
