--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -37,6 +37,7 @@ jobs:
           r2e new grubbyears@pm.me
           r2e add bbc https://feeds.bbci.co.uk/news/rss.xml
           r2e add reuters https://feeds.reuters.com/reuters/UKTopNews
+          r2e add ft_markets https://www.ft.com/rss/markets
 
       - name: Send email
         run: r2e run
